css/styles.css
/* fonts:
cirkabold
cirkalight
cirkaregular
hattonbold
hattonlight
hattonmedium
hattonultrabold
hattonultralight
hattonregular
neue_worldsuperCnLt
argesta_textregular_italic
argesta_textbold
argesta_textregular
argesta_displayregular_italic
argesta_displayregular
argesta_headlineRgIt
argesta_headlineregular
argesta_hairlineregular
argesta_hairlineRgIt
*/

html, body {
	margin: 0;
	padding: 0;
	width: 100%;
	/*box-sizing: border-box;*/
	-webkit-font-smoothing: antialiased;

}

body {
	background-image: url("../images/billie-holiday.png");
	background-color: rgb(131, 180, 252);
	font-family: "cirkalight";
}

.footer{

}
h1 {
	font-size: 3rem;
	line-height: 3.5rem;
	font-family: hattonultrabold;
}

h2 {
	font-size: 2rem;
	font-family: 'argesta_hairlineregular';
	margin-bottom:1rem;
	margin-top:1rem;
	color: rgb(112, 124, 145);
}

h3 {
	font-size: 24px;
	padding-left: 0px;
	text-align: left;
}

header {
			font-family: "helvetica Neue", sans-serif;
			font-weight: normal;
      width: 100%;
			height: 100px;
}

background {
			width: 100%
			height: 300px;
}

.spaceMode {
	margin-left: 30rem;
	margin-right: 30rem;
	position:static;
}

.wrapper {
	padding-bottom:100px;
}


.home {
	background-image: url("../images/beige-paper.jpeg");
	background-size: 200px;
	margin-left: 15rem;
	margin-right: 15rem;
	margin-top: 10rem;
	margin-bottom: 10rem;
	box-shadow: 0px 26px 6px 0px rgba(0,0,0,0.48);
	/* Background Color */
}

.tagline {
    margin-right: auto;
		margin-left: auto;
    padding-top: 16px;
		padding-left: 20px;
		padding-right: 20px;
    -webkit-transform: rotate(-7deg);
    -ms-transform: rotate(-7deg);
    transform: rotate(-7deg);
    font-family: 'hattonultrabold';
    font-size: 12vw;
    line-height: .75em;
    font-style: italic;
    font-weight: 700;
    text-align: center;
    letter-spacing: -.06em;
		width:75%;
}


.rainbow {
	background: linear-gradient(225deg, #FE7474 10%, rgb(255, 178, 83) 27%, rgb(161, 255, 126) 43%, rgb(120, 187, 255) 66%, rgb(255, 99, 182)80%, #FE7474 100%);
	-webkit-background-clip: text;
	background-clip: text;
	color: transparent;
	animation: rainbow_animation 20s linear infinite;
	background-size: 400% auto;
}


.footerText{
	padding-top:5rem;
	margin-bottom:1rem;
	font-family:"basier_squareregular";
	font-size:0.75rem;
	align-items: center;
	justify-content: center;
	color: rgb(112, 124, 145);
}

.description{
	font-family: "argesta_hairlineregular";
	font-size: 0.75rem;
}

.letterBody{
	font-family: "basier_squareregular";
	font-weight: normal;
	font-size: 0.75rem;
	line-height: 1.5em;
	margin-top:0px;
	color: rgb(112, 124, 145);
}

.salutations{
	font-family: "basier_squareregular";
	font-weight: normal;
	font-size: 0.75rem;
	line-height: 1em;
	margin-top:0px;
	color: rgb(112, 124, 145);
}

.signature{
	margin-top:0px;
	font-family: "basier_squareregular";
	font-size: 18px;
}

.animation {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 160px;
  overflow:hidden;

  font-size: 35px;
  line-height: 40px;

  &__container {
  	font-weight: 600;
		overflow: hidden;
		height: 40px;
  }

}

.topCard{
	align-items: center;
	line-height: 0.8;
	margin-left: auto;
	margin-right: auto;
	display:flex;
	justify-content: center;
	height: auto;
	width:50%;
}

@media(max-width: 875px) {
	.topCard {
	}

}

.cards {
	align-items: center;
	padding-left: 25%;
	padding-right: 25%;
	margin-left: auto;
margin-top:auto;
	margin-right: auto;
}

.work {
	/* display: grid; */
	/*  align-self: center; */
	/*width:75%; */
	margin-left: auto;
	margin-right:auto;
}

.contact {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin: 0px;
	padding: 0px;
	box-sizing: border-box;
}

.wrap-contact100 {
  width: 500px;
	box-shadow: 0px 3px 15px -9px #000000;
  background: #fbf7f7;
  border-radius: 10px;
  overflow: hidden;
  padding: 42px 55px 45px 55px;
}

.contact100-form {
  width: 100%;
}

.contact100-form-title {
  display: block;
  font-family: Helvetica;
  font-size: 39px;
  color: #333333;
  line-height: 1.2;
  text-align: center;
  padding-bottom: 44px;
}

.wrap-input100 {
  width: 100%;
  position: relative;
  border-bottom: 2px solid #d9d9d9;
  padding-bottom: 13px;
  margin-bottom: 27px;
}

.label-input100 {
  font-family: Helvetica;
  font-size: 13px;
  color: #666666;
  line-height: 1.5;
  padding-left: 5px;
}

.input100 {
  display: block;
  width: 100%;
  background: transparent;
  font-family: helvetica;
  font-size: 18px;
  color: #333333;
  line-height: 1.2;
  padding: 0 5px;
}

.focus-input100 {
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  pointer-events: none;
}

.focus-input100::before {
  content: "";
  display: block;
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 0;
  height: 2px;

  -webkit-transition: all 0.4s;
  -o-transition: all 0.4s;
  -moz-transition: all 0.4s;
  transition: all 0.4s;

  background: #7f7f7f;
}

input {
    outline: none;
    border: none;
}

input.input100 {
  height: 40px;
}

textarea {
  outline: none;
  border: none;
}

textarea.input100 {
  min-height: 110px;
  padding-top: 9px;
  padding-bottom: 13px;
}


.input100:focus + .focus-input100::before {
  width: 100%;
}

.has-val.input100 + .focus-input100::before {
  width: 100%;
}

.validate-input {
  position: relative;
}

/*//////////////////////////////////////////////////////////////////
[ Restyle Select2 ]*/

.select2-container {
  display: block;
  max-width: 100% !important;
  width: auto !important;
}

.select2-container .select2-selection--single {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  background-color: transparent;
  border: none;
  height: 40px;
  outline: none;
  position: relative;
}
/* ... */

